[tool.poetry]
name = "project-3-9"
version = "0.1.0"
description = ""
authors = ["m1chendi <m1chendi.0@gmail.com>"]
readme = "README.md"
packages = [{include = "project_3"}]

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
